<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginBottom="100dp"
        android:text="@string/resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="1dp"
        android:text="@string/suma"
        app:layout_constraintBottom_toTopOf="@+id/btnSubtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="132dp"
        android:text="@string/multiplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="156dp"
        android:text="@string/division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubtract" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="160dp"
        android:text="@string/resta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <EditText
        android:id="@+id/etNum1"
        android:layout_width="247dp"
        android:layout_height="81dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="148dp"
        android:autofillHints=""
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/etNum2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etNum2"
        android:layout_width="251dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/etNum1"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>